## Process this file with automake to produce Makefile.in
EXTRA_DIST = amb_expr.eag \
             countids.eag \
             decl.eag \
             dupl.eag \
             evenas.eag \
             expr.eag \
             expr2.eag \
             frac.eag \
             in.pico \
             lazy.eag \
             meta1.eag \
             meta2.eag \
             meta3.eag \
             minus2.eag \
             pico.eag \
             simpfin.eag \
             smengels.eag \
             smengels2.eag
